namespace Boopoo.BehaviorTrees
{
    public class Composite : Node
    {
    }
}