using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Boopoo.BehaviorTrees
{
    public class Decorator : Node
    {
    }
}