namespace Boopoo.BehaviorTrees
{
    public class Action : Node
    {
    }
}