namespace Boopoo.BehaviorTrees
{
    public class Condition
    {
    }
}